--- a/FinanceTracker/src/main/resources/com/example/financetracker/MainDashboard.fxml
+++ b/FinanceTracker/src/main/resources/com/example/financetracker/MainDashboard.fxml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <left>
@@ -33,6 +34,37 @@
       </AnchorPane>
    </left>
    <right>
-      <AnchorPane prefHeight="600.0" prefWidth="602.0" style="-fx-background-color: #E1FAF9; -fx-border-radius: 30;" BorderPane.alignment="CENTER" />
+      <AnchorPane prefHeight="600.0" prefWidth="602.0" style="-fx-background-color: #E1FAF9; -fx-border-radius: 30;" BorderPane.alignment="CENTER">
+         <children>
+            <Text fill="#00000066" layoutY="55.0" strokeWidth="0.0" text="Dashboard" textAlignment="CENTER" wrappingWidth="597.21630859375">
+               <font>
+                  <Font size="36.0" />
+               </font>
+            </Text>
+            <Text fill="#00000066" layoutX="34.0" layoutY="134.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Total Balance :" wrappingWidth="177.44140625">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Text>
+            <Text fill="#c2eaba" layoutX="34.0" layoutY="202.0" strokeType="OUTSIDE" strokeWidth="0.0" text="12345567.890" wrappingWidth="529.4414367675781">
+               <font>
+                  <Font size="64.0" />
+               </font>
+            </Text>
+            <TabPane layoutX="48.0" layoutY="269.0" prefHeight="319.0" prefWidth="522.0" tabClosingPolicy="UNAVAILABLE">
+              <tabs>
+                <Tab text="Income">
+                     <content>
+                        <AnchorPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #C2EABA;" />
+                     </content>
+                </Tab>
+                <Tab text="Expense">
+                     <content>
+                        <AnchorPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #ffafcc;" />
+                     </content>
+                </Tab>
+              </tabs>
+            </TabPane>
+         </children></AnchorPane>
    </right>
 </BorderPane>
