--- a/FinanceTracker/src/main/resources/com/example/financetracker/MainDashboard.fxml
+++ b/FinanceTracker/src/main/resources/com/example/financetracker/MainDashboard.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
@@ -12,14 +13,14 @@
    <left>
       <AnchorPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #63458A;" BorderPane.alignment="CENTER">
          <children>
-            <Button layoutX="16.0" layoutY="232.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="167.0" style="-fx-background-color: #0AD3FF; -fx-background-radius: 100;" text="Transactions" />
+            <Button layoutX="16.0" layoutY="232.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="167.0" style="-fx-background-color: #0AD3FF; -fx-background-radius: 10;" text="Transactions" />
             <Button layoutY="551.0" mnemonicParsing="false" prefHeight="56.0" prefWidth="203.0" style="-fx-background-color: #b7094c;" text="Logout" textAlignment="CENTER">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
             </Button>
-            <Button layoutX="16.0" layoutY="288.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="167.0" style="-fx-background-color: #0AD3FF; -fx-background-radius: 100;" text="Accounts" />
-            <Button layoutX="16.0" layoutY="346.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="167.0" style="-fx-background-color: #0AD3FF; -fx-background-radius: 100;" text="Profile" />
+            <Button layoutX="16.0" layoutY="288.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="167.0" style="-fx-background-color: #0AD3FF; -fx-background-radius: 10;" text="Accounts" />
+            <Button layoutX="16.0" layoutY="346.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="167.0" style="-fx-background-color: #0AD3FF; -fx-background-radius: 10;" text="Profile" />
             <Text fill="#9ca3db" layoutY="143.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome" textAlignment="CENTER" wrappingWidth="201.31648635864258">
                <font>
                   <Font name="System Bold" size="24.0" />
@@ -34,24 +35,25 @@
       </AnchorPane>
    </left>
    <right>
-      <AnchorPane prefHeight="600.0" prefWidth="602.0" style="-fx-background-color: #E1FAF9; -fx-border-radius: 30;" BorderPane.alignment="CENTER">
+      <AnchorPane prefHeight="600.0" prefWidth="602.0" style="-fx-background-color: #E1FAF9;" BorderPane.alignment="CENTER">
          <children>
-            <Text fill="#00000066" layoutY="55.0" strokeWidth="0.0" text="Dashboard" textAlignment="CENTER" wrappingWidth="597.21630859375">
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#63458a" height="127.0" layoutX="-1.0" layoutY="-50.0" stroke="#ffffff00" strokeType="OUTSIDE" width="599.0" />
+            <Text fill="#ffffff66" layoutY="49.0" stroke="#60428600" strokeType="OUTSIDE" strokeWidth="0.0" text="Dashboard" textAlignment="CENTER" wrappingWidth="597.21630859375">
                <font>
                   <Font size="36.0" />
                </font>
             </Text>
-            <Text fill="#00000066" layoutX="34.0" layoutY="134.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Total Balance :" wrappingWidth="177.44140625">
+            <Text fill="#00000066" layoutX="39.0" layoutY="117.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Total Balance :" wrappingWidth="177.44140625">
                <font>
-                  <Font size="24.0" />
+                  <Font size="18.0" />
                </font>
             </Text>
-            <Text fill="#c2eaba" layoutX="34.0" layoutY="202.0" strokeType="OUTSIDE" strokeWidth="0.0" text="12345567.890" wrappingWidth="529.4414367675781">
+            <Text fill="#7e5a9b" layoutX="34.0" layoutY="184.0" strokeType="OUTSIDE" strokeWidth="0.0" text="12345567.890" wrappingWidth="529.4414367675781">
                <font>
                   <Font size="64.0" />
                </font>
             </Text>
-            <TabPane layoutX="48.0" layoutY="269.0" prefHeight="319.0" prefWidth="522.0" tabClosingPolicy="UNAVAILABLE">
+            <TabPane layoutX="40.0" layoutY="255.0" prefHeight="319.0" prefWidth="522.0" tabClosingPolicy="UNAVAILABLE">
               <tabs>
                 <Tab text="Income">
                      <content>
@@ -65,6 +67,9 @@
                 </Tab>
               </tabs>
             </TabPane>
+            <Button layoutX="39.0" layoutY="209.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="106.0" style="-fx-background-color: #0AD3FF; -fx-background-radius: 10;" text="Stats" />
+            <Button layoutX="158.0" layoutY="209.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="106.0" style="-fx-background-color: #0AD3FF; -fx-background-radius: 10;" text="Budget" />
+            <Button layoutX="280.0" layoutY="209.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="106.0" style="-fx-background-color: #0AD3FF; -fx-background-radius: 10;" text="Notes" />
          </children></AnchorPane>
    </right>
 </BorderPane>
