--- a/FinanceTracker/src/main/resources/com/example/financetracker/MainDashboard.fxml
+++ b/FinanceTracker/src/main/resources/com/example/financetracker/MainDashboard.fxml
@@ -1,15 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.chart.BarChart?>
+<?import javafx.scene.chart.CategoryAxis?>
+<?import javafx.scene.chart.NumberAxis?>
+<?import javafx.scene.chart.PieChart?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.financetracker.DashboardController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <left>
       <AnchorPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #63458A;" BorderPane.alignment="CENTER">
          <children>
@@ -37,7 +43,7 @@
    <right>
       <AnchorPane prefHeight="600.0" prefWidth="602.0" style="-fx-background-color: #E1FAF9;" BorderPane.alignment="CENTER">
          <children>
-            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#63458a" height="127.0" layoutX="-1.0" layoutY="-50.0" stroke="#ffffff00" strokeType="OUTSIDE" width="599.0" />
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#63458a" height="131.0" layoutX="-3.0" layoutY="-52.0" stroke="#ffffff00" strokeType="OUTSIDE" width="613.0" />
             <Text fill="#ffffff66" layoutY="49.0" stroke="#60428600" strokeType="OUTSIDE" strokeWidth="0.0" text="Dashboard" textAlignment="CENTER" wrappingWidth="597.21630859375">
                <font>
                   <Font size="36.0" />
@@ -53,23 +59,56 @@
                   <Font size="64.0" />
                </font>
             </Text>
-            <TabPane layoutX="40.0" layoutY="255.0" prefHeight="319.0" prefWidth="522.0" tabClosingPolicy="UNAVAILABLE">
+            <TabPane layoutX="20.0" layoutY="223.0" prefHeight="351.0" prefWidth="563.0" tabClosingPolicy="UNAVAILABLE">
               <tabs>
-                <Tab text="Income">
+                <Tab text="Stats">
                      <content>
-                        <AnchorPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #C2EABA;" />
+                        <AnchorPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #C2EABA;">
+                           <children>
+                              <BarChart layoutX="32.0" layoutY="48.0" prefHeight="158.0" prefWidth="190.0" title="Income">
+                                <xAxis>
+                                  <CategoryAxis side="BOTTOM" />
+                                </xAxis>
+                                <yAxis>
+                                  <NumberAxis side="LEFT" />
+                                </yAxis>
+                              </BarChart>
+                              <BarChart layoutX="272.0" layoutY="48.0" prefHeight="158.0" prefWidth="190.0" title="Expense">
+                                 <xAxis>
+                                    <CategoryAxis side="BOTTOM" />
+                                 </xAxis>
+                                 <yAxis>
+                                    <NumberAxis side="LEFT" />
+                                 </yAxis>
+                              </BarChart>
+                           </children></AnchorPane>
                      </content>
                 </Tab>
-                <Tab text="Expense">
+                <Tab text="Budget">
                      <content>
-                        <AnchorPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #ffafcc;" />
+                        <AnchorPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #ffafcc;">
+                           <children>
+                              <PieChart layoutX="283.0" layoutY="57.0" prefHeight="180.0" prefWidth="227.0" title="Monthly Expense" />
+                              <PieChart layoutX="53.0" layoutY="57.0" prefHeight="180.0" prefWidth="227.0" title="Monthly Budget" />
+                           </children></AnchorPane>
                      </content>
                 </Tab>
+                  <Tab text="Notes">
+                    <content>
+                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" style="-fx-background-color: #FF9600;">
+                           <children>
+                              <TableView layoutY="1.0" prefHeight="294.0" prefWidth="564.0">
+                                <columns>
+                                  <TableColumn prefWidth="75.0" text="Date" />
+                                  <TableColumn prefWidth="487.9999694824219" text="Note on Transaction" />
+                                </columns>
+                              </TableView>
+                           </children>
+                        </AnchorPane>
+                    </content>
+                  </Tab>
               </tabs>
             </TabPane>
-            <Button layoutX="39.0" layoutY="209.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="106.0" style="-fx-background-color: #0AD3FF; -fx-background-radius: 10;" text="Stats" />
-            <Button layoutX="158.0" layoutY="209.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="106.0" style="-fx-background-color: #0AD3FF; -fx-background-radius: 10;" text="Budget" />
-            <Button layoutX="280.0" layoutY="209.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="106.0" style="-fx-background-color: #0AD3FF; -fx-background-radius: 10;" text="Notes" />
          </children></AnchorPane>
    </right>
 </BorderPane>
