--- a/FinanceTracker/src/main/resources/com/example/financetracker/MainDashboard.fxml
+++ b/FinanceTracker/src/main/resources/com/example/financetracker/MainDashboard.fxml
@@ -19,14 +19,14 @@
    <left>
       <AnchorPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #63458A;" BorderPane.alignment="CENTER">
          <children>
-            <Button layoutX="16.0" layoutY="232.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="167.0" style="-fx-background-color: #0AD3FF; -fx-background-radius: 10;" text="Transactions" />
+            <Button fx:id="transactionButton" layoutX="16.0" layoutY="232.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="167.0" style="-fx-background-color: #0AD3FF; -fx-background-radius: 10;" text="Transactions" />
             <Button layoutY="551.0" mnemonicParsing="false" prefHeight="56.0" prefWidth="203.0" style="-fx-background-color: #b7094c;" text="Logout" textAlignment="CENTER">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
             </Button>
-            <Button layoutX="16.0" layoutY="288.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="167.0" style="-fx-background-color: #0AD3FF; -fx-background-radius: 10;" text="Accounts" />
-            <Button layoutX="16.0" layoutY="346.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="167.0" style="-fx-background-color: #0AD3FF; -fx-background-radius: 10;" text="Profile" />
+            <Button fx:id="accountButton" layoutX="16.0" layoutY="288.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="167.0" style="-fx-background-color: #0AD3FF; -fx-background-radius: 10;" text="Accounts" />
+            <Button fx:id="profileButton" layoutX="16.0" layoutY="346.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="167.0" style="-fx-background-color: #0AD3FF; -fx-background-radius: 10;" text="Profile" />
             <Text fill="#9ca3db" layoutY="143.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome" textAlignment="CENTER" wrappingWidth="201.31648635864258">
                <font>
                   <Font name="System Bold" size="24.0" />
