--- a/FinanceTracker/src/main/resources/com/example/financetracker/sign-up.fxml
+++ b/FinanceTracker/src/main/resources/com/example/financetracker/sign-up.fxml
@@ -13,7 +13,7 @@
          <children>
             <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="7.0" layoutY="65.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@images.jpeg" />
+                  <Image url="@../../../pictures/images.jpeg" />
                </image>
             </ImageView>
             <Label layoutX="30.0" layoutY="251.0" text="555-5555-5555">
