--- a/FinanceTracker/src/main/resources/com/example/financetracker/MainDashboard.fxml
+++ b/FinanceTracker/src/main/resources/com/example/financetracker/MainDashboard.fxml
@@ -3,7 +3,6 @@
 <?import javafx.scene.chart.BarChart?>
 <?import javafx.scene.chart.CategoryAxis?>
 <?import javafx.scene.chart.NumberAxis?>
-<?import javafx.scene.chart.PieChart?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
@@ -32,7 +31,7 @@
                   <Font name="System Bold" size="24.0" />
                </font>
             </Text>
-            <Text fill="#9ca3db" layoutX="-1.0" layoutY="167.0" strokeType="OUTSIDE" strokeWidth="0.0" text="user" textAlignment="CENTER" wrappingWidth="201.31648635864258">
+            <Text fx:id="txtUserName" fill="#9ca3db" layoutX="-1.0" layoutY="167.0" strokeType="OUTSIDE" strokeWidth="0.0" text="user" textAlignment="CENTER" wrappingWidth="201.31648635864258">
                <font>
                   <Font name="System Bold" size="24.0" />
                </font>
@@ -54,14 +53,14 @@
                   <Font size="18.0" />
                </font>
             </Text>
-            <Text fill="#7e5a9b" layoutX="34.0" layoutY="184.0" strokeType="OUTSIDE" strokeWidth="0.0" text="12345567.890" wrappingWidth="529.4414367675781">
+            <Text fx:id="txtTotalBalance" fill="#7e5a9b" layoutX="34.0" layoutY="184.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0.0" wrappingWidth="529.4414367675781">
                <font>
                   <Font size="64.0" />
                </font>
             </Text>
             <TabPane layoutX="20.0" layoutY="223.0" prefHeight="351.0" prefWidth="563.0" tabClosingPolicy="UNAVAILABLE">
               <tabs>
-                <Tab text="Stats">
+                <Tab text="Expense">
                      <content>
                         <AnchorPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #C2EABA;">
                            <children>
@@ -76,12 +75,18 @@
                            </children></AnchorPane>
                      </content>
                 </Tab>
-                <Tab text="Budget">
+                <Tab text="Income">
                      <content>
                         <AnchorPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #ffafcc;">
                            <children>
-                              <PieChart layoutX="283.0" layoutY="57.0" prefHeight="180.0" prefWidth="227.0" title="Monthly Expense" />
-                              <PieChart layoutX="53.0" layoutY="57.0" prefHeight="180.0" prefWidth="227.0" title="Monthly Budget" />
+                              <BarChart fx:id="chartExpense1" prefHeight="298.0" prefWidth="566.0" title="Income">
+                                 <xAxis>
+                                    <CategoryAxis side="BOTTOM" />
+                                 </xAxis>
+                                 <yAxis>
+                                    <NumberAxis side="LEFT" />
+                                 </yAxis>
+                              </BarChart>
                            </children></AnchorPane>
                      </content>
                 </Tab>
@@ -102,6 +107,16 @@
                   </Tab>
               </tabs>
             </TabPane>
+            <Text fill="#00000066" layoutX="323.0" layoutY="117.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Total Expense :" wrappingWidth="177.44140625">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Text>
+            <Text fx:id="txtTotalExpense" fill="#7e5a9b" layoutX="320.0" layoutY="184.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0.0" wrappingWidth="289.4414367675781">
+               <font>
+                  <Font size="64.0" />
+               </font>
+            </Text>
          </children></AnchorPane>
    </right>
 </BorderPane>
