--- a/FinanceTracker/src/main/resources/com/example/financetracker/Account.fxml
+++ b/FinanceTracker/src/main/resources/com/example/financetracker/Account.fxml
@@ -1,26 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.gluonhq.charm.glisten.control.DropdownButton?>
-<?import com.gluonhq.charm.glisten.control.TextField?>
+
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.financetracker.AccountController">
+<?import javafx.scene.control.TextField?>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <left>
       <AnchorPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #63458A;" BorderPane.alignment="CENTER">
          <children>
-            <Button layoutX="16.0" layoutY="232.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="167.0" style="-fx-background-color: #0AD3FF; -fx-background-radius: 10;" text="Transactions" />
-            <Button layoutY="551.0" mnemonicParsing="false" prefHeight="56.0" prefWidth="203.0" style="-fx-background-color: #FF9600;" text="Logout" textAlignment="CENTER">
+            <Button fx:id="buttonTansaction" layoutX="16.0" layoutY="232.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="167.0" style="-fx-background-color: #0AD3FF; -fx-background-radius: 10;" text="Transactions" />
+            <Button fx:id="buttonLogout" layoutY="551.0" mnemonicParsing="false" prefHeight="56.0" prefWidth="203.0" style="-fx-background-color: #FF9600;" text="Logout" textAlignment="CENTER">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
             </Button>
-            <Button layoutX="16.0" layoutY="288.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="167.0" style="-fx-background-color: #0AD3FF; -fx-background-radius: 10;" text="Accounts" />
+            <Button fx:id="buttonAccount" layoutX="16.0" layoutY="288.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="167.0" style="-fx-background-color: #0AD3FF; -fx-background-radius: 10;" text="Accounts" />
             <Button layoutX="16.0" layoutY="346.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="167.0" style="-fx-background-color: #0AD3FF; -fx-background-radius: 10;" text="Profile" />
             <Text fill="#9ca3db" layoutY="143.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome" textAlignment="CENTER" wrappingWidth="201.31648635864258">
                <font>
@@ -49,7 +49,7 @@
                   <Font size="18.0" />
                </font>
             </Text>
-            <TextField floatText="Enter Account Name" layoutX="270.0" layoutY="145.0" prefHeight="27.0" prefWidth="253.0" />
+            <TextField fx:id="txtAccountName"  layoutX="270.0" layoutY="145.0" prefHeight="27.0" prefWidth="253.0" />
             <Text fill="#00000080" layoutX="127.0" layoutY="266.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Type">
                <font>
                   <Font size="18.0" />
@@ -60,25 +60,20 @@
                   <Font size="18.0" />
                </font>
             </Text>
-            <TextField floatText="Enter Amount" layoutX="270.0" layoutY="299.0" prefHeight="27.0" prefWidth="255.0" />
+            <TextField fx:id="txtAmount" layoutX="270.0" layoutY="299.0" prefHeight="27.0" prefWidth="255.0" />
             <Text fill="#00000080" layoutX="128.0" layoutY="428.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Note">
                <font>
                   <Font size="18.0" />
                </font>
             </Text>
-            <TextField floatText="Enter Note" layoutX="272.0" layoutY="391.0" prefHeight="27.0" prefWidth="251.0" />
-            <Button layoutX="316.0" layoutY="492.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="207.0" style="-fx-background-color: #86E7B8;" text="Add" />
-            <DropdownButton layoutX="272.0" layoutY="251.0" minWidth="-Infinity" prefHeight="27.0" prefWidth="253.0">
-                <items>
-                    <MenuItem text="Choice 1" />
-                    <MenuItem text="Choice 2" />
-                    <MenuItem text="Choice 3" />
-                </items>
-            </DropdownButton>
-            <Text fill="#d81e5b" layoutX="272.0" layoutY="208.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Invalid Name" wrappingWidth="252.9831027984619" />
-            <Text fill="#d81e5b" layoutX="270.0" layoutY="357.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Invalid Name" wrappingWidth="252.9831027984619" />
-            <Text fill="#d81e5b" layoutX="270.0" layoutY="449.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Invalid Name" wrappingWidth="252.9831027984619" />
-            <Button layoutX="92.0" layoutY="492.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="207.0" style="-fx-background-color: #D81E5B;" text="Cancel" />
+            <TextField fx:id="txtNote"  layoutX="272.0" layoutY="391.0" prefHeight="27.0" prefWidth="251.0" />
+            <Button fx:id="buttonAdd" layoutX="316.0" layoutY="492.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="207.0" style="-fx-background-color: #86E7B8;" text="Add" />
+            <Text fx:id="valAccountName" fill="#d81e5b" layoutX="272.0" layoutY="208.0" strokeType="OUTSIDE" strokeWidth="0.0" text="*" wrappingWidth="252.9831027984619" />
+            <Text fx:id="valAmount" fill="#d81e5b" layoutX="270.0" layoutY="357.0" strokeType="OUTSIDE" strokeWidth="0.0" text="*" wrappingWidth="252.9831027984619" />
+            <Text fx:id="valNote" fill="#d81e5b" layoutX="270.0" layoutY="449.0" strokeType="OUTSIDE" strokeWidth="0.0" text="*" wrappingWidth="252.9831027984619" />
+            <Button fx:id="buttonCancel" layoutX="92.0" layoutY="492.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="207.0" style="-fx-background-color: #D81E5B;" text="Cancel" />
+            <ChoiceBox fx:id="choiceboxType" layoutX="272.0" layoutY="246.0" prefWidth="150.0" />
+            <Text fx:id="valAccountType" fill="#d81e5b" layoutX="441.0" layoutY="265.0" strokeType="OUTSIDE" strokeWidth="0.0" text="*" wrappingWidth="83.98310279846191" />
          </children>
       </AnchorPane>
    </right>
