--- a/FinanceTracker/src/main/resources/com/example/financetracker/LoginPage.fxml
+++ b/FinanceTracker/src/main/resources/com/example/financetracker/LoginPage.fxml
@@ -9,45 +9,46 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" >
+<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <AnchorPane prefHeight="400.0" prefWidth="223.0" style="-fx-background-color: FED70D;">
+      <AnchorPane prefHeight="600.0" prefWidth="271.0" style="-fx-background-color: #3490dc;">
          <children>
-            <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="3.0" layoutY="57.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../../pictures/images.jpeg" />
-               </image>
-            </ImageView>
-            <Label layoutX="59.0" layoutY="245.0" text="123876412387" />
-            <Label layoutX="58.0" layoutY="286.0" text="Login Page Setup" />
-         </children>
-      </AnchorPane>
-      <AnchorPane prefHeight="400.0" prefWidth="399.0">
-         <children>
-            <ImageView fitHeight="150.0" fitWidth="193.0" layoutX="119.0" layoutY="50.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../../pictures/lock.png" />
-               </image>
-            </ImageView>
-            <Label layoutX="31.0" layoutY="246.0" text="Username" />
-            <Label layoutX="31.0" layoutY="271.0" text="Password" />
-            <TextField fx:id="tf_username" layoutX="134.0" layoutY="234.0">
+            <Label layoutX="107.0" layoutY="104.0" text="Login" textFill="WHITE" />
+            <Label layoutX="15.0" layoutY="277.0" text="Username" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="14.0" />
+               </font></Label>
+            <Label layoutX="15.0" layoutY="361.0" text="Password" textFill="WHITE" />
+            <TextField fx:id="tf_username" layoutX="16.0" layoutY="311.0" prefHeight="25.0" prefWidth="215.0" promptText="Enter Email" style="-fx-background-radius: 12; -fx-background-color: #8ecae6;">
                <font>
                   <Font name="Arial" size="13.0" />
                </font>
             </TextField>
-            <TextField fx:id="tf_password" layoutX="134.0" layoutY="276.0">
+            <TextField fx:id="tf_password" layoutX="15.0" layoutY="384.0" prefHeight="25.0" prefWidth="215.0" promptText="Enter Password" style="-fx-background-radius: 12; -fx-background-color: #8ecae6;">
                <font>
                   <Font name="Arial" size="13.0" />
                </font>
             </TextField>
-            <Button fx:id="button_login" layoutX="159.0" layoutY="311.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="88.0"  style="-fx-background-color: #FED700; -fx-cursor: hand;" text="Login">
+            <Button fx:id="button_login" layoutX="73.0" layoutY="435.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="100.0" style="-fx-background-color: #FF9F1C; -fx-cursor: hand;" text="Login" textFill="WHITE">
                <font>
-                  <Font name="Arial" size="18.0" />
+                  <Font name="Arial" size="16.0" />
                </font>
             </Button>
-            <Label layoutX="85.0" layoutY="364.0" text="Not a Member" />
-            <Button fx:id="button_signup" layoutX="180.0" layoutY="360.0" mnemonicParsing="false" style="-fx-background-color: trasparent; -fx-cursor: hand;" text="SignUp" textFill="#484fd3" />
+            <Label layoutX="32.0" layoutY="523.0" text="Not a Member" />
+            <Button fx:id="button_signup" layoutX="138.0" layoutY="515.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="78.0" style="-fx-background-color: #FFFFFF; -fx-cursor: hand;" text="SignUp" textFill="#3490dc" />
+         </children>
+      </AnchorPane>
+      <AnchorPane prefHeight="600.0" prefWidth="579.0" style="-fx-background-color: #FFFFFF;">
+         <children>
+            <ImageView fitHeight="536.0" fitWidth="469.0" layoutX="29.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../pictures/78285-original-httpslottiefilescom24811-saving-money.gif" />
+               </image>
+            </ImageView>
+            <Label layoutX="91.0" layoutY="397.0" text="Spend Wise" textAlignment="CENTER" textFill="#3490dc">
+               <font>
+                  <Font name="Arial Bold" size="64.0" />
+               </font></Label>
          </children>
       </AnchorPane>
    </children>
