--- a/FinanceTracker/src/main/resources/com/example/financetracker/application.css
+++ b/FinanceTracker/src/main/resources/com/example/financetracker/application.css
@@ -8,3 +8,17 @@
 .label {
     -fx-font-size: 14pt;
 }
+
+.button {
+    -fx-background-color: dodgerblue;
+}
+
+.button:hover {
+    -fx-background-color: red;
+    -fx-scale-x: 1.1;
+    -fx-scale-y: 1.1;
+
+    transition: -fx-background-color 0.5s ease,
+    -fx-scale-x 0.5s ease,
+    -fx-scale-y 0.5s ease;
+}
